ImpressCMS ChangeLog
=== ImpressCMS 1.2 RC 1 ===
Release date: 20 Nov 2009
Revision:

* #48: unserialize() [function.unserialize]: Error (Phoenyx/skenow/Stranger)
* #824: Profile Blank Page after perms (phoenyx)
* #826: HTML Purifier options created incorrectly during upgrade (skenow)
* #820: ACP assigned as start page for all groups during upgrade (skenow/Stranger)
* #527: reCAPTCHA Mailhide (pesianstranger)
* #596: Plugin hiddencontent = problem with: Preferences Main >> Personalization >> Hide content tag (Phoenyx/Stranger/Sato)
* #805: system search template not ML compliant (Stranger/Underdog/Davidl2/Fiammybe)
* #646: missing language definition _MD_AM_DBUPDATED (image manager) (Stranger/Underdog)
* #823: Organizing language files (pesianstranger)
* #719: IPF: initial settings for uploader (mime other than image type) (phoenyx/skenow/Marcan)
* #821: HTMLpurifier cache path is not created during an upgrade (skenow)
* #789: installer + icmsConfig (skenow/Stranger/fiammybe)
* #784: Block admin - options are not available to edit (malanciault/Phoenyx/skenow/underdog/wtravel)
* #621: the layout of the social bookmark block should be changed as it is too wide (Phoenyx)
* #579: New block files causes modules not to function correctly (skenow)
* #747: I can not create a new category in the image Manager (skenow/Underdog)
* #748: Preferences: User Settings > Welcome Message is converted to HTML (underdog/skenow)
* #558: Make image manager use jQuery instead of prototype! (skenow/MrTheme)
* #404: Permission issues with image manager. (Underdog)
* #625: dhtml editor shows line breaks as html (maybe same as #624) (skenow/Underdog)
* #650: Image manager cannot handle bitmaps (skenow/Phoenyx)
* #803: installer do not copy the ".htaccess" from protector (Vaughan/Underdog)
* #793: blocks do not consider the gravatar (Phoenyx)
* #792: Old waiting content block is not properly deleted during upgrade (skenow)