@@ -10,7 +10,7 @@
 * @version		$Id$
 */
 
-define('ICMS_VERSION_NAME','ImpressCMS 1.2 RC1');
+define('ICMS_VERSION_NAME','ImpressCMS 1.2 Final');
 /**
  * To developers:
  * if you want to get the version number of the core, please use something like:
@@ -19,7 +19,7 @@ define('ICMS_VERSION_NAME','ImpressCMS 1.2 RC1');
  * substr(XOOPS_VERSION, 11, -6)
  * Please note: This code works only on FINAL versions
  */
- 
+
 // For backward compatibility with XOOPS
 define('XOOPS_VERSION', ICMS_VERSION_NAME);
 
@@ -31,14 +31,14 @@ define('XOOPS_VERSION', ICMS_VERSION_NAME);
  * 10 = Final
  */
 
-define('ICMS_VERSION_STATUS', 3);
+define('ICMS_VERSION_STATUS', 10);
 
 /**
  * Build number
  *
  * Every release has its own build number, incrementable by 1 everytime we make a release
  */
-define('ICMS_VERSION_BUILD', 30);
+define('ICMS_VERSION_BUILD', 31);
 
 /**
  * Latest dbversion of the System Module
