@@ -3,7 +3,7 @@ ImpressCMS 1.2 RC 1 release notes
 
 The ImpressCMS Project is very proud to announce a new version in the 1.2 series. ImpressCMS 1.2 introduce a few improvments motivated by our constant desire of developing the best easy to use open source CMS.
 
-Please note that as a beta, this release if testing purposes only and should not be installed on production servers.
+Please note that as a release candidate, this release if testing purposes only and should not be installed on production servers.
 
 
 Please see the full [[Change Log]] for details in docs/changelog.txt.
@@ -11,13 +11,14 @@ Please see the full [[Change Log]] for details in docs/changelog.txt.
 ==System requirements==
 
 *PHP
-**    PHP 5.1 or higher (5.2 or higher recommended)
+** PHP 5.1 or higher (5.2 or higher recommended)
+** 16MB memory
 *MySQL
-**    MySQL 4.1.0 or higher
+** MySQL 4.1.0 or higher
 *Web server
-**    Any server supporting the required PHP version (Apache highly recommended)
+** Any server supporting the required PHP version (Apache highly recommended)
 
-==Changes==
+==Changes in this release==
 
 '''Added'''
 * #793: blocks do not consider the gravatar (Phoenyx)
@@ -41,14 +42,14 @@ This release can be downloaded from the [https://sourceforge.net/project/showfil
 
 This release can be downloaded directly on your server using the WGET command (providing you have SSH access to your server). To download it, simply use this code:
 
-wget http://www.impresscms.org/download/1.2_beta/
+wget http://www.impresscms.org/download/1.2_rc1/
 
 ==Checking out ImpressCMS from the SVN==
 
 You can easily get ImpressCMS using SVN. Instructions about this can be found here: [[Install_and_update_using_SVN]].
 
 The path for this release is the following:
-https://svn.impresscms.org/core/releases/impresscms_1.2_beta/
+https://svn.impresscms.org/core/releases/impresscms_1.2_rc1/
 
 If you feel like getting the latest "edge" version, you can checkout the core trunk at :
 
@@ -100,9 +101,9 @@ ImpressCMS displays a basic error page when a fatal error preventing it to run i
 
 ==Modules, themes and languages==
 
-The packages do not contain any module apart from the system one. You are invited to browse the ImpressCMS Addons web site at http://addons.impresscms.org to get all the modules, themes and languages you need.
+The packages now contains the system module, along with a content module and a profile module. You are invited to browse the ImpressCMS Addons web site at http://addons.impresscms.org to get additional modules, themes and languages you need.
 
-We also highly recommend the installation of the Protector module which will bring additional protection and logging capabilities to your site.
+The Protector module is installed by default with a new installation of ImpressCMS for additional protection and logging capabilities to your site.
 
 ==Where to find more information ?==
 
@@ -119,9 +120,7 @@ Sourceforge Project: http://www.sourceforge.net/projects/impresscms
 
 ===ImpressCMS Mailing Lists===
 
-A few mailing lists are available for everyone to stay informed regarding development information, bug tracking, feature requests, etc...
-
-Simply go here to subscribe to the desired mailing lists: http://sourceforge.net/mail/?group_id=205633
+To get on the developer mailing list, complete this short form to join the team - http://community.impresscms.org/modules/liaise/index.php?form_id=2
 
 ===ImpressCMS Related Sites===
 
@@ -134,8 +133,6 @@ Simply go here to subscribe to the desired mailing lists: http://sourceforge.net
 * YouTube: http://www.youtube.com/impresscms
 * Last.FM: http://www.last.fm/group/ImpressCMS
 * ImpressCMS Toolbar: http://impresscms.ourtoolbar.com/
-
-
 
 '''The ImpressCMS Project'''
 http://www.impresscms.org
